# symphonypy

./: .gitattributes  .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  LICENSE  README.md  env.yml  requirements.txt  setup.cfg  validation.ipynb  validation_PBMC_example.ipynb  validation_PCA.ipynb
.github/: workflows
.github/workflows/: python-publish.yml  test.yaml
benchmarking/: Benchmarking_harmony.ipynb  Benchmarking_harmony_PBMC_Satija.ipynb  Benchmarking_harmony_PBMC_Satija_CITEseq.ipynb  Benchmarking_symphony.ipynb  Benchmarking_symphony_PBMC.ipynb  Harmony_rpy2.ipynb  Symphonypy_simple_tutorial.ipynb  data_download.ipynb  sp.tl.ingest.ipynb  validation_PBMC_example.ipynb  validation_PCA.ipynb
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
notebooks/: Symphonypy_precomputed.ipynb  Symphonypy_preinstalled.ipynb  Symphonypy_simple_tutorial.ipynb  Symphonypy_without_harmony_tutorial.ipynb
symphonypy/: __init__.py  _utils.py  datasets.py  main.py  mapping.py  pp.py  preprocessing.py  tl.py  tools.py  utils.py
symphonypy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: prepare_test_sample.py  test_preprocessing.py  test_tools.py
tests/data/: PBMC_Satija.harmony.h5ad  PBMC_Satija.query_subsample.h5ad  PBMC_Satija.symphony.h5ad
