[metadata]
name = symphonypy
version = 0.2.2
author = Kseniya Petrova, Sergey Isaev
author_email = praefrontalis@gmail.com, serj.hoop@gmail.com
description = Porting of Symphony R package to Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/potulabe/symphonypy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    harmonypy
    scanpy
    scikit-learn
